2004-05-05  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/sh64/crange1.rd: Update sh_info to decimal.
	* ld-sh/sh64/crange2.rd: Likewise.
	* ld-sh/sh64/crange3.rd: Likewise.
	* ld-sh/sh64/crange3-cmpct.rd: Likewise.
	* ld-sh/sh64/crange3-media.rd: Likewise.
	* ld-sh/sh64/crangerel1.rd: Likewise.
	* ld-sh/sh64/crangerel2.rd: Likewise.

2004-05-05  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexe.r: Update sh_info to decimal.
	* ld-powerpc/tlsexe32.r: Likewise.
	* ld-powerpc/tlsexetoc.r: Likewise.
	* ld-powerpc/tlsso.r: Likewise.
	* ld-powerpc/tlsso32.r: Likewise.
	* ld-powerpc/tlstocso.r: Likewise.

2004-04-24  Chris Demetriou  <cgd@broadcom.com>

	* ld-elf/merge.d: XFAIL on all MIPS targets.

2004-04-24  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexe32.d: Update.
	* ld-powerpc/tlsso32.d: Update.

2004-04-23  Chris Demetriou  <cgd@broadcom.com>

	* ld-mips-elf/reloc-3-r.d: Remove, as part of MIPS -membedded-pic
	removal.
	* ld-mips-elf/reloc-3-srec.d: Likewise.
	* ld-mips-elf/reloc-3.ld: Likewise.
	* ld-mips-elf/reloc-3a.s: Likewise.
	* ld-mips-elf/reloc-3b.s: Likewise.
	* ld-mips-elf/mips-elf.exp: Don't run now-removed tests.

2004-04-22  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/tlsbin-1.d: Update
	* ld-sh/tlspic-1.d: Update.

2004-04-22  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-i386/tlspic.dd: Updated.

2004-04-21  Chris Demetriou  <cgd@broadcom.com>

	* ld-empic/run.c: Removed as part of MIPS --embedded-relocs removal.
	* ld-empic/empic.exp: Likewise.
	* ld-empic/relax.t: Likewise.
	* ld-empic/relax1.c: Likewise.
	* ld-empic/relax2.c: Likewise.
	* ld-empic/relax3.c: Likewise.
	* ld-empic/relax4.c: Likewise.
	* ld-empic/runtest1.c: Likewise.
	* ld-empic/runtest2.c: Likewise.
	* ld-empic/runtesti.s: Likewise.
	* ld-mips-elf/empic1-ln.d: Likewise.
	* ld-mips-elf/empic1-lp.d: Likewise.
	* ld-mips-elf/empic1-mn.d: Likewise.
	* ld-mips-elf/empic1-mp.d: Likewise.
	* ld-mips-elf/empic1-ref.s: Likewise.
	* ld-mips-elf/empic1-sn.d: Likewise.