@@ -21,6 +21,7 @@ if {![istarget frv*-*-*] || ![is_elf_format]} {
 }
 
 global LDFLAGS
+set saved_LDFLAGS "$LDFLAGS"
 set LDFLAGS "$LDFLAGS -melf32frvfd"
 
 run_dump_test "fdpic-static-1"
@@ -56,3 +57,5 @@ run_dump_test "fdpic-pie-8"
 run_dump_test "fdpic-shared-8-fail"
 run_dump_test "fdpic-shared-8"
 run_dump_test "fdpic-shared-local-8"
+
+set LDFLAGS "$saved_LDFLAGS"
